fix 'coupons gone' message alignment

--- a/app/assets/stylesheets/qwiqq.css.scss
+++ b/app/assets/stylesheets/qwiqq.css.scss
@@ -903,3 +903,7 @@ p.empty-deals{
   width: 159px;
   height: 51px;
 }
+
+#post .gone {
+  padding-top: 38px;
+}
